# NRF52840

./: .gitignore  ReadMe.md  debug.json
ACE/Application/: Makefile  app.ld  main.c  main.h
ACE/Bootloader/: Makefile  boot.ld  boot_startup.c  bootloader.c  bootloader.h  main.c  main.h  sysmem.c  system_cfg.c
ACE/Common/: Makefile.common
ACE/Driver/: drv_common.h  drv_irq.h  drv_power_clock.h
ACE/Test_OS/: Makefile  test.ld
ACE/Test_ace_os/: asm.h  context_swtich.s  main.c  makefile  readme.md  syscall.s  thread.c  thread.h
ACE/Tool/Ace_tool/: pyproject.toml  readme.md  requirements.txt
ACE/Tool/Ace_tool/src/ace_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ACE/Tool/Ace_tool/src/myflasher/: cli.py  debugger.py  flasher.py
ACE/test_ace_os_2/: main.c  makefile  startup.c
BLE_Project/TEMP_PROJ/: Makefile
TASK1/: readme.md
TASK1/Bootloader/: Makefile  boot.ld  boot_startup.c  bootloader.c  bootloader.h  main.c
TASK1/Common/: Makefile.common  Makefile.windows
TASk2/: readme.md
TASk2/Application/: Makefile  app.ld  app_section_header.c  app_startup.c  main.c
TASk2/Bootloader/: Makefile  boot.ld  boot_section_header.c  boot_startup.c  bootloader.c  bootloader.h  main.c
TASk2/Common/: Makefile.common
TASk2/Inc_common/: common.h  memory_map.h  reg.h
TASk2/bare_core/: core.h
TASk2/osKernel/: context_switch.s  syscall.s
guide/: common_make.md  normal_make.md
low-level-setting/001-helloWorld/: Makefile  hello.ld  low_set.ld  main.c  startup.c
low-level-setting/Inc_common/: memory_map.h
template_proj/src/: main.c  (+3 more)
(+451 files in other folders)
